--- a/.github/workflows/main_mission3chatbot.yml
+++ b/.github/workflows/main_mission3chatbot.yml
@@ -21,14 +21,19 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: npm install, build, and test
+      - name: Install dependencies and build client
         run: |
+          cd client
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build
+
+      - name: Install server dependencies
+        run: |
+          cd server
+          npm install
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -43,7 +48,7 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write # This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
@@ -68,4 +73,5 @@ jobs:
           app-name: 'mission3chatbot'
           slot-name: 'Production'
           package: .
+
           
